--- a/apps/frontend/i18n/no/messages.xml
+++ b/apps/frontend/i18n/no/messages.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE xliff PUBLIC "-//XLIFF//DTD XLIFF//EN" "http://www.oasis-open.org/committees/xliff/documents/xliff.dtd">
 <xliff version="1.0">
-  <file source-language="EN" target-language="no" datatype="plaintext" original="messages" date="2011-01-01T20:41:26Z" product-name="messages">
+  <file source-language="EN" target-language="no" datatype="plaintext" original="messages" date="2011-01-03T11:25:39Z" product-name="messages">
     <header/>
     <body>
       <!-- Navigation -->
@@ -26,10 +26,6 @@
         <target>Kategorier</target>
       </trans-unit>
       <!-- Events -->
-      <trans-unit id="6">
-        <source>Events List</source>
-        <target>Eventliste</target>
-      </trans-unit>
       <trans-unit id="7">
         <source>Title</source>
         <target>Tittel</target>
@@ -90,10 +86,6 @@
         <source>Read more &lt;a href="%1%"&gt;here&lt;/a&gt;</source>
         <target>Les mer &lt;a href="%1%"&gt;her&lt;/a&gt;</target>
       </trans-unit>
-      <trans-unit id="22">
-        <source>Arrangers List</source>
-        <target>Arrangørliste</target>
-      </trans-unit>
       <trans-unit id="23">
         <source>Id</source>
         <target>Id</target>
@@ -122,10 +114,6 @@
         <source>Events scheduled for %1%</source>
         <target>Events planlagt for %1%</target>
       </trans-unit>
-      <trans-unit id="30">
-        <source>Festival List</source>
-        <target>Festivalliste</target>
-      </trans-unit>
       <trans-unit id="31">
         <source>Events at this festival</source>
         <target>Events ved denne festivalen</target>
@@ -133,10 +121,6 @@
       <trans-unit id="32">
         <source>No events at this festival</source>
         <target>Ingen events på denne festivalen</target>
-      </trans-unit>
-      <trans-unit id="33">
-        <source>Locations List</source>
-        <target>Stedsliste</target>
       </trans-unit>
       <trans-unit id="34">
         <source>Root</source>
@@ -154,9 +138,41 @@
         <source>Level</source>
         <target>Nivå</target>
       </trans-unit>
-      <trans-unit id="38">
-        <source>Categorys List</source>
+      <trans-unit id="39">
+        <source>Event Calendar</source>
+        <target>Eventkalender</target>
+      </trans-unit>
+      <trans-unit id="41">
+        <source>Festival list</source>
+        <target>Festivalliste</target>
+      </trans-unit>
+      <trans-unit id="43">
+        <source>Location list</source>
+        <target>Stedsliste</target>
+      </trans-unit>
+      <trans-unit id="46">
+        <source>Category</source>
+        <target>Kategori</target>
+      </trans-unit>
+      <trans-unit id="47">
+        <source>Arranger list</source>
+        <target>Arrangørliste</target>
+      </trans-unit>
+      <trans-unit id="48">
+        <source>Festival</source>
+        <target>Festival</target>
+      </trans-unit>
+      <trans-unit id="49">
+        <source>Event list</source>
+        <target>Eventliste</target>
+      </trans-unit>
+      <trans-unit id="50">
+        <source>Category list</source>
         <target>Kategoriliste</target>
+      </trans-unit>
+      <trans-unit id="51">
+        <source>Part of</source>
+        <target>Del av</target>
       </trans-unit>
     </body>
   </file>
